# minimal-fe-solver

./: .gitignore  CMakeLists.txt  README.md  benchmark.py
src/: main.cpp  solver.h  types.h
src_cpp/: element.cpp  element.h  solver.cpp  sparse_matrix.h
src_py/: cg_method.py  direct_method.py  fem_types.py  main.py  results.py  solver.py
